--- a/.github/workflows/openwrt_k3.yml
+++ b/.github/workflows/openwrt_k3.yml
@@ -10,14 +10,14 @@
 
 #==========================
 # 工作流的名字（随便写）
-name: openwrt_acrh17_ap
+name: openwrt_k3
 #==========================
 
 on:
   push:
     paths:
       #==========================
-      - "acrh17_ap.config"
+      - "k3.config"
       # 改成和下方CONFIG_FILE 一样
       #==========================
     branches:
@@ -51,7 +51,7 @@ env:
   #==========================
   # Specify here your config file
   # 在这里指定你的配置文件名
-  CONFIG_FILE: acrh17.config
+  CONFIG_FILE: k3W.config
   #==========================
   # 编译前运行的脚本
   DIY_P1_SH: diy-part1.sh
