--- a/p2w_master.config
+++ b/p2w_master.config
@@ -1,10 +1,10 @@
 CONFIG_TARGET_ipq40xx=y
-CONFIG_TARGET_ipq40xx_generic=y
-CONFIG_TARGET_ipq40xx_generic_DEVICE_p2w_r619ac-128m=y
+CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac-128m=y
+CONFIG_TARGET_BOARD="ipq40xx"
 CONFIG_ARIA2_BITTORRENT=y
 CONFIG_ARIA2_NOXML=y
 CONFIG_ARIA2_OPENSSL=y
-CONFIG_ARIA2_WEBSOCKET=y
+CONFIG_ARIA2_WEBSOCKET=ye
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_aria2=y
 CONFIG_PACKAGE_ariang=y
