--- a/p2w_r619ac.config
+++ b/p2w_r619ac.config
@@ -1,6 +1,6 @@
 CONFIG_TARGET_ipq40xx=y
-CONFIG_TARGET_ipq40xx_generic=y
-CONFIG_TARGET_ipq40xx_generic_DEVICE_p2w_r619ac-128m=y
+CONFIG_TARGET_ipq40xx_DEVICE_p2w_r619ac-128m=y
+CONFIG_TARGET_BOARD="ipq40xx"
 CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_UnblockNeteaseMusic is not set
 # CONFIG_PACKAGE_UnblockNeteaseMusicGo is not set
