--- a/.github/workflows/openwrt_p2w_master.yml
+++ b/.github/workflows/openwrt_p2w_master.yml
@@ -31,8 +31,8 @@ on:
         default: "false"
   #==========================
   #取消下方注释 = 每天凌晨4点编译
-  schedule:
-    - cron: 0 20 * * *
+  # schedule:
+  #  - cron: 0 20 * * *
   #==========================
   #取消下方注释 = 点[★star]一键编译
   #watch:
