--- a/acrh17.config
+++ b/acrh17.config
@@ -8,6 +8,7 @@ CONFIG_ARIA2_WEBSOCKET=y
 CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-rclone=y
+CONFIG_PACKAGE_luci-app-dawn=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_aria2=y
