--- a/p2w_master.config
+++ b/p2w_master.config
@@ -25,7 +25,7 @@ CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-sit=y
 
-CONFIG_PACKAGE_luci-app-dawn=y
+# CONFIG_PACKAGE_luci-app-dawn=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-frpc=y
