--- a/p2w_r619ac.config
+++ b/p2w_r619ac.config
@@ -22,7 +22,7 @@ CONFIG_PACKAGE_kmod-sit=y
 # CONFIG_PACKAGE_libnghttp2 is not set
 # CONFIG_PACKAGE_libuv is not set
 
-CONFIG_PACKAGE_luci-app-dawn=y
+# CONFIG_PACKAGE_luci-app-dawn=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
