--- a/.github/workflows/op_mac_acrh17.yml
+++ b/.github/workflows/op_mac_acrh17.yml
@@ -24,11 +24,6 @@ on:
       - master
   repository_dispatch:
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: "SSH connection to Actions"
-        required: false
-        default: "false"
   #==========================
   #取消下方注释 = 每天凌晨4点编译
   # schedule:
@@ -83,7 +78,7 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           sudo hdiutil create -size 40g -type SPARSE -fs "Case-sensitive HFS+" -volname OpenWrt OpenWrt.sparseimage
-          hdiutil attach OpenWrt.sparseimage
+          hdiutil attach OpenWrt.sparseimage -autoopenrw
           brew install coreutils diffutils findutils gawk gnu-getopt gnu-tar grep wget quilt xz
           brew install gcc@11
           sudo mkdir -p /Volumes/OpenWrt/workdir
@@ -116,13 +111,6 @@ jobs:
           chmod +x $DIY_P2_SH
           cd openwrt
           $GITHUB_WORKSPACE/$DIY_P2_SH
-
-      - name: SSH connection to Actions 检查是否ssh
-        uses: P3TERX/ssh2actions@v1.0.0
-        if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
-        env:
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
       - name: Download package 下载插件资源
         id: package
