--- a/.github/workflows/op_mac_acrh17.yml
+++ b/.github/workflows/op_mac_acrh17.yml
@@ -79,7 +79,7 @@ jobs:
           sudo hdiutil attach OpenWrt.sparseimage -notremovable -autoopenrw
           sudo mkdir -p /Volumes/OpenWrt/workdir
           sudo chown $USER:$GROUPS /Volumes/OpenWrt/workdir
-          brew install coreutils diffutils findutils gawk gnu-getopt gnu-tar grep wget quilt xz
+          brew install coreutils diffutils findutils gawk gnu-getopt grep quilt
           brew install gcc@11 make cmake
           brew upgrade coreutils diffutils findutils gawk gnu-getopt gnu-tar grep wget quilt xz
           brew upgrade gcc@11 cmake
@@ -97,33 +97,33 @@ jobs:
           df -hT $PWD
           git clone $REPO_URL -b $REPO_BRANCH /Volumes/OpenWrt/workdir/openwrt
           mkdir openwrt
-          ln -sf /Volumes/OpenWrt/workdir/openwrt ./openwrt
+          ln -sf /Volumes/OpenWrt/workdir/openwrt openwrt
 
       - name: Load custom feeds 加载自定义feeds
         run: |
-          [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
+          [ -e $FEEDS_CONF ] && mv $FEEDS_CONF /Volumes/OpenWrt/workdir/openwrt/feeds.conf.default
           chmod +x $DIY_P1_SH
-          cd openwrt
+          cd /Volumes/OpenWrt/workdir/openwrt
           $GITHUB_WORKSPACE/$DIY_P1_SH
 
       - name: Update feeds 更新feeds
-        run: cd openwrt && ./scripts/feeds update -a
+        run: cd /Volumes/OpenWrt/workdir/openwrt && ./scripts/feeds update -a
 
       - name: Install feeds 安装feeds
-        run: cd openwrt && ./scripts/feeds install -a
+        run: cd /Volumes/OpenWrt/workdir/openwrt && ./scripts/feeds install -a
 
       - name: Load custom configuration 读取自定义配置
         run: |
-          [ -e files ] && mv files openwrt/files
-          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+          [ -e files ] && mv files /Volumes/OpenWrt/workdir/openwrt/files
+          [ -e $CONFIG_FILE ] && mv $CONFIG_FILE /Volumes/OpenWrt/workdir/openwrt/.config
           chmod +x $DIY_P2_SH
-          cd openwrt
+          cd /Volumes/OpenWrt/workdir/openwrt
           $GITHUB_WORKSPACE/$DIY_P2_SH
 
       - name: Download package 下载插件资源
         id: package
         run: |
-          cd openwrt
+          cd /Volumes/OpenWrt/workdir/openwrt
           make defconfig
           make download -j8
           find dl -size -1024c -exec ls -l {} \;
@@ -132,7 +132,7 @@ jobs:
       - name: Compile the firmware 编译固件
         id: compile
         run: |
-          cd openwrt
+          cd /Volumes/OpenWrt/workdir/openwrt
           echo -e "$(nproc) thread compile"
           make -j$(nproc) || make -j1 || make -j1 V=s
           echo "::set-output name=status::success"
@@ -149,13 +149,13 @@ jobs:
         if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
         with:
           name: OpenWrt_bin${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
-          path: openwrt/bin
+          path: /Volumes/OpenWrt/workdir/openwrt/bin
 
       - name: Organize files 安排文件
         id: organize
         if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
         run: |
-          cd openwrt/bin/targets/*/*
+          cd /Volumes/OpenWrt/workdir/openwrt/bin/targets/*/*
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "::set-output name=status::success"
