--- a/.github/workflows/op_mac_acrh17.yml
+++ b/.github/workflows/op_mac_acrh17.yml
@@ -74,13 +74,13 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
-          cd ~
-          sudo hdiutil create -size 60g -type SPARSE -fs "Case-sensitive HFS+" -volname OpenWrt OpenWrt.sparseimage
-          sudo hdiutil attach OpenWrt.sparseimage -notremovable -autoopenrw
+          sudo hdiutil create -size 70g -type SPARSE -fs 'Case-sensitive APFS' -volname OpenWrt ~/OpenWrt.sparseimage
+          sudo hdiutil attach ~/OpenWrt.sparseimage -notremovable -autoopenrw
           sudo mkdir -p /Volumes/OpenWrt/workdir
           sudo chown $USER:$GROUPS /Volumes/OpenWrt/workdir
+          brew update
           brew install coreutils diffutils findutils gawk gnu-getopt grep quilt
-          brew install gcc@11 make cmake
+          brew install gcc@11 make cmake awk
           brew upgrade coreutils diffutils findutils gawk gnu-getopt gnu-tar grep wget quilt xz
           brew upgrade gcc@11 cmake
           echo 'export PATH="/usr/local/opt/coreutils/libexec/gnubin:$PATH"' >> ~/.bashrc
@@ -94,7 +94,6 @@ jobs:
 
       - name: Clone source code 抓取源码
         run: |
-          df -hT $PWD
           git clone $REPO_URL -b $REPO_BRANCH /Volumes/OpenWrt/workdir/openwrt
           mkdir openwrt
           ln -sf /Volumes/OpenWrt/workdir/openwrt openwrt
@@ -139,10 +138,6 @@ jobs:
           grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
           [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-
-      - name: Check space usage 检查空间用量
-        if: (!cancelled())
-        run: df -hT
 
       - name: Upload bin directory 上传bin文件夹
         uses: actions/upload-artifact@main
