--- a/.github/workflows/op_mac_acrh17.yml
+++ b/.github/workflows/op_mac_acrh17.yml
@@ -79,18 +79,13 @@ jobs:
           sudo mkdir -p /Volumes/OpenWrt/workdir
           sudo chown $USER:$GROUPS /Volumes/OpenWrt/workdir
           brew update
-          brew install coreutils diffutils findutils gawk gnu-getopt grep quilt
-          brew install gcc@11 make cmake
-          brew upgrade coreutils diffutils findutils gawk gnu-getopt gnu-tar grep wget quilt xz
-          brew upgrade gcc@11 cmake
-          echo 'export PATH="/usr/local/opt/coreutils/libexec/gnubin:$PATH"' >> ~/.bashrc
-          echo 'export PATH="/usr/local/opt/findutils/libexec/gnubin:$PATH"' >> ~/.bashrc
-          echo 'export PATH="/usr/local/opt/gnu-getopt/bin:$PATH"' >> ~/.bashrc
-          echo 'export PATH="/usr/local/opt/gnu-tar/libexec/gnubin:$PATH"' >> ~/.bashrc
-          echo 'export PATH="/usr/local/opt/grep/libexec/gnubin:$PATH"' >> ~/.bashrc
-          echo 'export PATH="/usr/local/opt/gnu-sed/libexec/gnubin:$PATH"' >> ~/.bashrc
-          echo 'export PATH="/usr/local/opt/make/libexec/gnubin:$PATH"' >> ~/.bashrc
+          brew install coreutils diffutils findutils gawk gnu-getopt grep quiltc make
+          brew install gcc@11 
+          brew install make
+          brew upgrade gcc@11 coreutils diffutils findutils gawk gnu-getopt gnu-tar grep wget quilt xz cmake
+          sudo echo 'export PATH="/usr/local/opt/make/libexec/gnubin:/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/grep/libexec/gnubin:/usr/local/opt/gnu-tar/libexec/gnubin:/usr/local/opt/gnu-getopt/bin:/usr/local/opt/coreutils/libexec/gnubin:/usr/local/opt/findutils/libexec/gnubin:$PATH"' >> ~/.bashrc
           source ~/.bashrc
+          make --version
 
       - name: Clone source code 抓取源码
         run: |
