--- a/.github/workflows/op_mac_acrh17.yml
+++ b/.github/workflows/op_mac_acrh17.yml
@@ -126,6 +126,7 @@ jobs:
       - name: Compile the firmware 编译固件
         id: compile
         run: |
+          make --version
           cd /Volumes/OpenWrt/workdir/openwrt
           echo -e "$(nproc) thread compile"
           make -j$(nproc) || make -j1 || make -j1 V=s
