--- a/.github/workflows/op_mac_acrh17.yml
+++ b/.github/workflows/op_mac_acrh17.yml
@@ -79,10 +79,8 @@ jobs:
           sudo mkdir -p /Volumes/OpenWrt/workdir
           sudo chown $USER:$GROUPS /Volumes/OpenWrt/workdir
           brew update
-          brew install coreutils diffutils findutils gawk gettext gnu-getopt grep quilt cmake libtool mercurial openssl wget xz
-          brew install gcc@11 
-          brew install make
-          brew upgrade gcc@11 coreutils diffutils findutils gawk gnu-getopt gnu-tar grep wget quilt xz cmake
+          brew install coreutils diffutils findutils gawk gettext gnu-getopt grep quilt cmake libtool mercurial openssl wget xz gnu-tar git-extras svn make ncurses pkg-config          brew install gcc@11 
+          brew upgrade
           sudo echo 'export PATH="/usr/local/opt/make/libexec/gnubin:/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/grep/libexec/gnubin:/usr/local/opt/gnu-tar/libexec/gnubin:/usr/local/opt/gnu-getopt/bin:/usr/local/opt/coreutils/libexec/gnubin:/usr/local/opt/findutils/libexec/gnubin:$PATH"' >> ~/.bashrc
           source ~/.bashrc
 
