--- a/p2w_r619ac.config
+++ b/p2w_r619ac.config
@@ -21,6 +21,12 @@ CONFIG_PACKAGE_kmod-sit=y
 # CONFIG_PACKAGE_libnatpmp is not set
 # CONFIG_PACKAGE_libnghttp2 is not set
 # CONFIG_PACKAGE_libuv is not set
+CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
+CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=y
+CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
+CONFIG_PACKAGE_ddns-scripts_nsupdate=y
+CONFIG_PACKAGE_ddns-scripts_route53-v1=y
 
 # CONFIG_PACKAGE_luci-app-dawn=y
 CONFIG_PACKAGE_luci-app-frpc=y
