--- a/p2w_r619ac.config
+++ b/p2w_r619ac.config
@@ -30,6 +30,7 @@ CONFIG_PACKAGE_ddns-scripts_route53-v1=y
 
 # CONFIG_PACKAGE_luci-app-dawn=y
 CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+CONFIG_PACKAGE_luci-app-easymesh=y
 
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
